Some bugfixes, and the new Reda and Renu files.

--- a/data/config/main.cfg
+++ b/data/config/main.cfg
@@ -9,10 +9,11 @@
 [main]
 includes: None
 tilesize: 64
-testing_map: data\maps\converted\
+testing_map: data\maps\ten\
 wall_config_file: data\config\walls.cfg
 unit_config_file: data\config\unit.cfg
 user_config_file: data\config\user.cfg
+object_config_file: data\config\object.cfg
 
 [wall_types]
 0: ground
@@ -30,3 +31,8 @@ user_config_file: data\config\user.cfg
 
 [units]
 0: rockraider
+
+[objects]
+1: energy_crystal
+2: ore
+3: empty_crystal
