--- a/data/config/walls.cfg
+++ b/data/config/walls.cfg
@@ -23,6 +23,9 @@ speed_coef: 1
 drillTime: none
 conductor: no
 texture: data/models/world/textures/ground.png
+select: yes
+dynamite: 3
+reinforce: none
 
 [solid_rock]
 fullName: Solid Rock
@@ -34,6 +37,9 @@ speed_coef: 0
 drillTime: none
 conductor: no
 texture: data/models/world/textures/solidrock.png
+select: no
+dynamite: no
+reinforce: none
 
 [hard_rock]
 fullName: Hard Rock
@@ -45,6 +51,9 @@ speed_coef: 0
 drillTime: 10
 conductor: no
 texture: data/models/world/textures/hardrock.png
+select: yes
+dynamite: yes
+reinforce: 3
 
 [loose_rock]
 fullName: Loose Rock
@@ -56,6 +65,9 @@ speed_coef: 0
 drillTime: 4
 conductor: no
 texture: data/models/world/textures/looserock.png
+select: yes
+dynamite: yes
+reinforce: 3
 
 [dirt]
 fullName: Dirt
@@ -67,6 +79,9 @@ speed_coef: 0
 drillTime: 4
 conductor: no
 texture: data/models/world/textures/dirt.png
+select: yes
+dynamite: yes
+reinforce: 3
 
 [lava]
 fullName: Lava
@@ -78,6 +93,9 @@ speed_coef: 1
 drillTime: none
 conductor: no
 texture: data/models/world/textures/lava.png
+select: no
+dynamite: yes
+reinforce: none
 
 [ore_seam]
 fullName: Ore Seam
@@ -89,6 +107,9 @@ speed_coef: 0
 drillTime: 10
 conductor: no
 texture: data/models/world/textures/UNSET.png
+select: yes
+dynamite: yes
+reinforce: none
 
 [water]
 fullName: Water
@@ -100,6 +121,9 @@ speed_coef: 1
 drillTime: none
 conductor: no
 texture: data/models/world/textures/water.png
+select: no
+dynamite: no
+reinforce: none
 
 [energy_crystal_seam]
 fullName: Energy Crystal Seam
@@ -111,6 +135,9 @@ speed_coef: 0
 drillTime: 10
 conductor: no
 texture: data/models/world/textures/ecseam.png
+select: yes
+dynamite: yes
+reinforce: none
 
 [recharge_seam]
 fullName: Recharge Seam
@@ -122,3 +149,6 @@ speed_coef: 0
 drillTime: 4
 conductor: no
 texture: data/models/world/textures/UNSET.png
+select: yes
+dynamite: no
+reinforce: none
